# CMakeList.txt : CMake project for HeadAudioSpatializer, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("HeadAudioSpatializer")

# Add source to this project's executable.
add_executable (HeadAudioSpatializer "HeadAudioSpatializer.cpp" "HeadAudioSpatializer.h")

# TODO: Add tests and install targets if needed.
